# squad-ressegurinho-ia

./: README.md  START.bat  TODO.md  docker-compose.yml
agent/: README.md  connection_db.py  exemplo_sql.py  load_knowledge.py  main.py  pyproject.toml
agent-ui/: package-lock.json  tailwind.config.ts
agent-ui/.claude/: settings.local.json
agent-ui/.claude/agents/: nextjs-expert.md
agent-ui/src/app/: globals.css  page.tsx
agent-ui/src/components/chat/ChatArea/: ChatArea.tsx  MessageArea.tsx  ScrollToBottom.tsx
agent-ui/src/components/chat/ChatArea/ChatInput/: ChatInput.tsx
agent-ui/src/components/chat/ChatArea/Messages/: ChatBlankState.tsx  MessageItem.tsx  Messages.tsx
agent-ui/src/components/chat/Sidebar/: EntitySelector.tsx  ModeSelector.tsx  Sidebar.tsx
agent-ui/src/components/chat/Sidebar/Sessions/: SessionItem.tsx  Sessions.tsx
agent-ui/src/components/ui/: button.tsx  skeleton.tsx  textarea.tsx
agent-ui/src/components/ui/icon/: constants.tsx  custom-icons.tsx
agent/.claude/agents/: agno-specialist.md
agent/config/: agent_instructions.py
agent/tmp/: agents.db
agent/tools/: buscar_codigo_produto.py  consulta_produto.py  criar_cotacao.py
