[project]
name = "agente-ressegurinho"
version = "0.1.0"
description = "Agente RAG para resseguros usando Agno"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "agno>=2.1.0",
    "ddgs>=9.6.0",
    "fastapi>=0.118.0",
    "openai>=1.0.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.10",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
